TestOptionsWithRanges.java failure for XX:+UseNUMA -XX:+UseNUMAInterleaving -XX:NUMAInterleaveGranularity=65536

XMLWordPrintable

    • gc
    • b105
    • Verified

      TEST FAILED: Error processing option NUMAInterleaveGranularity with valid value '-XX:+UseNUMA -XX:+UseNUMAInterleaving -XX:NUMAInterleaveGranularity=65536'! JVM output reports a fatal error. JVM exited with code 1!
      stdout content[# To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=\\virtualspace.cpp:287
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (C:\\jprt\\T\\P1\\214436.mikael\\s\\hotspot\\src\\share\\vm\\memory\\virtualspace.cpp:287), pid=87880, tid=57304
      # fatal error: cannot protect protection page
      #
      # JRE version: (9.0) (build )
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (9-internal+0-2015-12-08-214436.mikael.8144881, mixed mode, tiered, compressed oops, g1 gc, windows-amd64)
      # Core dump will be written. Default location: C:\\local\\aurora\\sandbox\\results\\workDir\\runtime\\CommandLine\\OptionsValidation\\TestOptionsWithRanges\\hs_err_pid87880.mdmp
      #
      # An error report file with more information is saved as:
      # C:\\local\\aurora\\sandbox\\results\\workDir\\runtime\\CommandLine\\OptionsValidation\\TestOptionsWithRanges\\hs_err_pid87880.log
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #
      ]
      stderr content[Java HotSpot(TM) 64-Bit Server VM warning: NUMA page allocation failed
      Java HotSpot(TM) 64-Bit Server VM warning: NUMA page allocation failed
      Java HotSpot(TM) 64-Bit Server VM warning: NUMA page allocation failed
      ]

      java.lang.RuntimeException: 1 tests failed! (Error processing option NUMAInterleaveGranularity with valid value '-XX:+UseNUMA -XX:+UseNUMAInterleaving -XX:NUMAInterleaveGranularity=65536'! JVM output reports a fatal error. JVM exited with code 1!)
       (assert failed: 1 == 0)
      at jdk.test.lib.Asserts.error(Asserts.java:447)
      at jdk.test.lib.Asserts.assertTrue(Asserts.java:374)
      at jdk.test.lib.Asserts.assertEquals(Asserts.java:169)
      at jdk.test.lib.Asserts.assertEQ(Asserts.java:143)
      at TestOptionsWithRanges.main(TestOptionsWithRanges.java:160)
      at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
      at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
      at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.lang.reflect.Method.invoke(Method.java:520)
      at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:92)
      at java.lang.Thread.run(Thread.java:747)

      JavaTest Message: Test threw exception: java.lang.RuntimeException: 1 tests failed! (Error processing option NUMAInterleaveGranularity with valid value '-XX:+UseNUMA -XX:+UseNUMAInterleaving -XX:NUMAInterleaveGranularity=65536'! JVM output reports a fatal error. JVM exited with code 1!)
       (assert failed: 1 == 0)
      JavaTest Message: shutting down test

      STATUS:Failed.`main' threw exception: java.lang.RuntimeException: 1 tests failed! (Error processing option NUMAInterleaveGranularity with valid value '-XX:+UseNUMA -XX:+UseNUMAInterleaving -XX:NUMAInterleaveGranularity=65536'! JVM output reports a fatal error. JVM exited with code 1!) (assert failed: 1 == 0)

            Assignee:
            Sangheon Kim (Inactive)
            Reporter:
            Gerard Ziemski (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: