8145000: TestOptionsWithRanges.java failure for XX:+UseNUMA -XX:+UseNUMAInterleaving -XX:NUMAInterleaveGranularity=65536

Add protect_pages_individually() to protect memory per chunk on Windows

Reviewed-by: jwilhelm, tbenson